add khealth logo

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Inner Page - Khealth Corporation</title>
+  <title>Inner Page - KHealth Corporation</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -53,9 +53,11 @@
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html"><span>K</span>health<span>.</span></a></h1>
+      <!-- <h1 class="logo"><a href="index.html"><span>K</span>Health<span>.</span></a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt=""></a>-->
+      <h1 class="logo"><a href="index.html" class="logo"><img src="assets/img/logo.svg" height="60" alt="KHealth"></a>
+      </h1>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -221,7 +223,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3><span>K</span>health<span>.</span></h3>
+            <h3><span>K</span>Health<span>.</span></h3>
             <p>
               NKTI Compound, <br>
               East Ave., Diliman, QC,<br>
@@ -270,7 +272,7 @@
 
     <div class="container py-4">
       <div class="copyright">
-        &copy; Copyright <strong><span>Khealth Corporation</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>KHealth Corporation</span></strong>. All Rights Reserved
       </div>
     </div>
   </footer><!-- End Footer -->
