--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Khealth Corporation</title>
+  <title>KHealth Corporation</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -53,9 +53,10 @@
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html"><span>K</span>health<span>.</span></a></h1>
+      <!-- <h1 class="logo"><a href="index.html"><span>K</span>health<span>.</span></a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt=""></a>-->
+      <h1 class="logo"><a href="index.html" class="logo"><img src="assets/img/logo.svg" height="60" alt="KHealth"></a>
+      </h1>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -122,7 +123,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
-      <h1>Welcome to <span>Khealth</span></h1>
+      <h1>Welcome to <span>KHealth</span></h1>
       <h2>A message from our CEO Mr. Park</h2>
       <div class="d-flex">
         <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
@@ -458,7 +459,7 @@
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
                 <h3>Juan Dela Cruz</h3>
-                <h4>Ceo &amp; Founder</h4>
+                <h4>CEO &amp; Founder</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium
@@ -1039,7 +1040,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3><span>K</span>health<span>.</span></h3>
+            <h3><span>K</span>Health<span>.</span></h3>
             <p>
               NKTI Compound, <br>
               East Ave., Diliman, QC,<br>
@@ -1088,7 +1089,7 @@
 
     <div class="container py-4">
       <div class="copyright">
-        &copy; Copyright <strong><span>Khealth Corporation</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>KHealth Corporation</span></strong>. All Rights Reserved
       </div>
     </div>
   </footer><!-- End Footer -->
