--- a/history.html
+++ b/history.html
@@ -53,35 +53,16 @@
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <!-- <h1 class="logo"><a href="index.html"><span>K</span>Health<span>.</span></a></h1> -->
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt=""></a>-->
       <h1 class="logo"><a href="index.html" class="logo"><img src="assets/img/logo.svg" height="60" alt="KHealth"></a>
       </h1>
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link" href="index.html">Home</a></li>
-          <!--
-          <li><a class="nav-link scrollto" href="about.html">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          -->
           <li class="dropdown"><a href="#"><span>Company</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <!-- <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li> -->
               <li><a href="profile.html">Profile</a></li>
-              <li><a href="history.html">History</a></li>
+              <li><a href="#" class="active">History</a></li>
               <li><a href="#">Certificated</a></li>
               <li><a href="http://www.duchembio.com/en/">DuchemBio</a></li>
             </ul>
@@ -113,7 +94,7 @@
               <li><a href="#">Mary Mediatrix Medical Center</a></li>
             </ul>
           </li>
-          <li><a class="nav-link active" href="#">Contact</a></li>
+          <li><a class="nav-link" href="contact.html">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -128,73 +109,26 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Contact</h2>
-          <h3><span>Contact Us</span></h3>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae
-            autem.</p>
+          <h2>History</h2>
+          <h3><span>Company History</span></h3>
+          <p>DuChemBio Company Ltd. (founded in 2002), distributes and supplies radiopharmaceuticals and multimodality
+            imaging
+            systems in 10 partner PET/CT Centers in South Korea.</p>
         </div>
 
-        <div class="row" data-aos="fade-up" data-aos-delay="100">
-          <div class="col-lg-6">
-            <div class="info-box mb-4">
-              <i class="bx bx-map"></i>
-              <h3>Our Address</h3>
-              <p>NKTI Compound, East Ave., Diliman, QC, Philippines 1100</p>
-            </div>
-          </div>
+        <p>In 2013, Khealth Corporation, a subsidiary 9aorl to life of DuChemBio signed a Public-Private KHealth
+          Partnership with
+          National Kidney Transplant Institute as a Medical Cyclotron and PET/CT Facility through GE Technology. By the
+          year
+          2015, the facility became operational with a capacity of 100 FDG doses a day.</p>
+        <br>
+        <h3>Our Vision</h3>
+        <p>To be the leading and most trusted company that produces and supplies safe and cost effective
+          radiopharmaceutical products in the Philippines. </p>
 
-          <div class="col-lg-3 col-md-6">
-            <div class="info-box  mb-4">
-              <i class="bx bx-envelope"></i>
-              <h3>Email Us</h3>
-              <p>info@khealthcorp.com</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6">
-            <div class="info-box  mb-4">
-              <i class="bx bx-phone-call"></i>
-              <h3>Call Us</h3>
-              <p>0917-325-6129</p>
-            </div>
-          </div>
-
-        </div>
-
-        <div class="row" data-aos="fade-up" data-aos-delay="100">
-
-          <div class="col-lg-6 ">
-            <iframe class="mb-4 mb-lg-0"
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3860.166748239666!2d121.04539396530728!3d14.646474129876408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397b708dbf8e70d%3A0x8fd039e5d980b33e!2sKhealth%20Corporation!5e0!3m2!1sen!2sph!4v1619061916754!5m2!1sen!2sph"
-              frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
-          </div>
-
-          <div class="col-lg-6">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="col form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                </div>
-                <div class="col form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-              </div>
-              <div class="form-group">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
-          </div>
-
-        </div>
+        <br>
+        <h3>Our Mission</h3>
+        <p>To partner with healthcare industry experts in making PET/CT more accessible to all Filipino patients. </p>
 
       </div>
     </section><!-- End Contact Section -->
