--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                   <li><a href="#">Deep Drop Down 5</a></li>
                 </ul>
               </li> -->
-              <li><a href="#">Profile</a></li>
-              <li><a href="#">History</a></li>
+              <li><a href="profile.html">Profile</a></li>
+              <li><a href="history.html">History</a></li>
               <li><a href="#">Certificated</a></li>
               <li><a href="http://www.duchembio.com/en/">DuchemBio</a></li>
             </ul>
@@ -103,7 +103,7 @@
           <li class="dropdown"><a href="#"><span>Client Hospitals</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="https://www.facebook.com/nktipetct">NKTI PET-Ct Section</a></li>
-              <li><a href="#">Makati PET-CT Center</a></li>
+              <li><a href="#">Makati PET/CT Center at Centuria</a></li>
               <li><a href="#">AUF Medical Center</a></li>
               <li><a href="#">Cardinal Santos Medical Center</a></li>
               <li><a href="#">iSCAN</a></li>
@@ -144,7 +144,8 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
               <h4 class="title"><a href="">Cyclotron</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <p class="description">Used for the preparation of a wide variety of radionuclides that find application
+                in combined Positron Emission Tomography and Computed Tomography (PET/CT) scans.</p>
             </div>
           </div>
 
@@ -152,7 +153,8 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bx bx-bullseye"></i></div>
               <h4 class="title"><a href="">PET-CT</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <p class="description">Molecular Fusion Imaging combines positron emission tomography (PET) and computed
+                tomography (CT) into once machine.</p>
             </div>
           </div>
 
